--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = 3bb4850a
-	trimbase = 07467bf8
+	trimbase = 
 	parent = upstream
 	previous = a902cd63
