--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = da55dd59
-	trimbase = 
+	base = c74dcf8d
+	trimbase = da55dd59
 	parent = upstream
 	previous = ce548af8
