--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 05257779
-	trimbase = 
+	base = 98d27861
+	trimbase = 05257779
 	parent = upstream
 	previous = ce548af8
