--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 56766352
-	trimbase = 
+	base = d67e7184
+	trimbase = 56766352
 	parent = upstream
 	previous = adc9d4a0
