--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = 1cf04799
-	trimbase = e634eb8a
+	trimbase = 
 	parent = upstream
 	previous = ce548af8
