--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 43a106ee
-	trimbase = 
+	base = 54f2930c
+	trimbase = 43a106ee
 	parent = upstream
 	previous = adc9d4a0
