--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 04d6ff26
-	trimbase = 
+	base = b0774bdc
+	trimbase = 04d6ff26
 	parent = upstream
 	previous = adc9d4a0
