--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 1f0da45f
-	trimbase = 
+	base = 7004b848
+	trimbase = 1f0da45f
 	parent = upstream
 	previous = adc9d4a0
