--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = 26d6c086
-	trimbase = 9ed9db8d
+	trimbase = 
 	parent = upstream
 	previous = ce548af8
