--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = c59704a3
-	trimbase = 
+	base = fc044226
+	trimbase = c59704a3
 	parent = upstream
 	previous = adc9d4a0
