--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = 01a095cc
-	trimbase = f497aebd
+	trimbase = 
 	parent = upstream
 	previous = ce548af8
