--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = bc9cd49e
-	trimbase = 
+	base = 298b181f
+	trimbase = bc9cd49e
 	parent = upstream
 	previous = adc9d4a0
