--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = cd786e89
-	trimbase = 
+	base = 74271df0
+	trimbase = cd786e89
 	parent = upstream
 	previous = adc9d4a0
