--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = f0b67b04
-	trimbase = 
+	base = 58b1761c
+	trimbase = f0b67b04
 	parent = upstream
 	previous = adc9d4a0
